[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=45", "setuptools-scm[toml]>=6.2", "wheel" ]

[project]
name = "redis-kit"
version = "1.0.0"
description = "A reusable Redis caching framework for Python"
readme = "README.md"
keywords = [ "cache", "delay-queue", "distributed-lock", "redis", "routing" ]
license = { text = "MIT" }
maintainers = [
  { name = "HACK-WU" },
]
authors = [
  { name = "HACK-WU" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "redis>=4",
]

optional-dependencies.all = [
  "redis-kit[metrics]",
  "redis-kit[yaml]",
]
optional-dependencies.dev = [
  "fakeredis>=2",
  "pytest>=7",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4",
  "types-redis>=4",
]
optional-dependencies.metrics = [ "prometheus-client>=0.14" ]
optional-dependencies.yaml = [ "pyyaml>=5" ]
urls.Changelog = "https://github.com/HACK-WU/redis-kit-py/blob/master/CHANGELOG.md"
urls.Documentation = "https://github.com/HACK-WU/redis-kit-py"
urls.Homepage = "https://github.com/HACK-WU/redis-kit-py"
urls.Repository = "https://github.com/HACK-WU/redis-kit-py"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "virtualenv==20.29.3",
]

[tool.hatch.build.targets.wheel]
packages = [ "src/redis_kit" ]

[tool.ruff]
format.docstring-code-format = true
lint.select = [ "E4", "E7", "E9", "F", "UP" ]
lint.extend-ignore = [ "E402" ]
lint.fixable = [ "ALL" ]
lint.extend-safe-fixes = [ "UP" ]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = [ "test_*.py" ]
python_classes = [ "Test*" ]
python_functions = [ "test_*" ]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=elasticflow",
  "--cov-report=term-missing",
]
markers = [
  "slow: marks tests as slow",
  "integration: marks tests as integration tests",
]
